inline editor overflow fix

--- a/app/assets/stylesheets/inline-edit.css.scss
+++ b/app/assets/stylesheets/inline-edit.css.scss
@@ -40,3 +40,7 @@
     margin-bottom: 15px;
   }
 }
+.ckeditable[data-type=textarea] {
+  overflow: auto;
+  width: 100%
+}
